Fix overflow issue in how section.

--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -22,7 +22,9 @@
 
 .how-section {
     .row {
-        @include reset-row-spacing(30px);
+        @include media-breakpoint-up(md){
+            @include reset-row-spacing(30px);
+        }
     }
 }
 
